[tool.poetry]
name = "python-django"
version = "0.1.0"
description = ""
authors = ["Yakov <EternalSilence1337@gmail.com>"]
[tool.poetry.dependencies]
python = "^3.11.9"
django = "4.2.0"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.15.2"
django-filter = "^24.2"
django-debug-toolbar = "4.0.0"
pillow = "^10.4.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
